--- a/readme
+++ b/readme
@@ -1,1 +1,6 @@
-.
+// asap net solution open
+// class library for given tasks
+// entity framework and inmemory install manage nugget packet
+// in service create header file anu interface
+// add reference ar damaviwydes
+// 
